# In-memory-vector-DB

./: CMakeLists.txt  README.md  vecdb.json
data/: embed_server.py
include/: EmbedClient.hpp  HNSWIndex.hpp  VecMath.hpp  VectorDatabase.hpp  VectorRecord.hpp  commands.hpp
src/: EmbedClient.cpp  HNSWIndex.cpp  VecMath.cpp  VectorDatabase.cpp  db_commands.cpp  embed_commands.cpp  main.cpp  tests.cpp  ui.cpp
